Corrected tests